# tfTeams

./: .gitignore  README.md  pyproject.toml
assets/: champions.csv  synergie.csv  synergies.csv
parser/: champions_parser.py  synergies_parser.py
tfTeams/: generate_comps.py  main.py  path_config.py
tfTeams/_dataclasses/: champion_type.py  champions.py  rank.py  synergy.py
tfTeams/_evaluation/: evaluate.py
tfTeams/_factories/: create_champions.py  create_synergies.py
tfTeams/_parsers/: dataset_parsers.py
